wip: some updates

--- a/src/components/layout/BaseFooter.astro
+++ b/src/components/layout/BaseFooter.astro
@@ -36,11 +36,7 @@ const { backToTop = false } = Astro.props;
 <footer class='bg-black text-white p-6'>
   <h2 class='hidden'>Footer</h2>
   <p class='outfit'>
-    Brutal theme for Astro - by <a
-      href='https://www.elian.codes/'
-      target='_blank'
-      class='text-blue'>ElianCodes</a
-    >
+    Let me know if there's a project you'd like to work on together :)
   </p>
 </footer>
 
