--- a/src/components/layout/BaseNavigation.astro
+++ b/src/components/layout/BaseNavigation.astro
@@ -11,15 +11,19 @@ const navigationItems = [
 const socialIcons = [
   {
     name: 'GitHub',
-    url: 'https://github.com/eliancodes/brutal',
+    url: 'https://github.com/ztoben',
     icon: 'i-uil-github',
   },
   {
     name: 'Twitter',
-    url: 'https://www.twitter.com/eliancodes',
+    url: 'https://twitter.com/ztoben',
     icon: 'i-uil-twitter',
   },
-  { name: 'RSS', url: '/feed.xml', icon: 'i-uil-rss' },
+  {
+    name: 'LinkedIn',
+    url: 'https://www.linkedin.com/in/zachary-toben-bbab4a84/',
+    icon: 'i-uil-linkedin',
+  },
 ];
 
 const { pageTitle } = Astro.props;
@@ -28,7 +32,7 @@ const { pageTitle } = Astro.props;
 <header class='border-b-4 border-black flex justify-between p-6 items-center'>
   {pageTitle && <h1 class='hidden'>{pageTitle}</h1>}
   <a href='/' title='Back to Home'>
-    <p class='righteous md:text-5xl'>Brutal</p>
+    <p class='righteous md:text-5xl'>Hi, my name is Zach 👋</p>
   </a>
   <nav class='hidden md:inline-block'>
     <h2 class='hidden'>Navigation</h2>
@@ -53,7 +57,7 @@ const { pageTitle } = Astro.props;
               href={item.url}
               class='hover:text-green hover:underline transition-all duration-150 ease-in-out'
               target='_blank'
-              title={`'See @ElianCodes on ${item.name}`}
+              title={`Find me on ${item.name}`}
             >
               <div class:list={[item.icon, 'w-6 h-6']} />
             </a>
