--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ const myTechStack = [
       <div class='col-span-8 sm:col-span-4'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif'>
-            What tools do I like to use?
+            What tools do I use?
           </h2>
           <p class='outfit'>
             Generally, whatever gets the job done. But here are some of my favorites:
@@ -85,7 +85,7 @@ const myTechStack = [
       <div class='col-span-8 sm:col-span-4'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
-            What kind of things do I like to build?
+            What do I like to make?
           </h2>
           <p class='poppins'>
             I like building web applications, discovering new technologies, and sharing my knowledge with others.
@@ -99,7 +99,7 @@ const myTechStack = [
       <div class='col-span-8 sm:col-span-4'>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
-            What is this site built with?
+            How is this site made?
           </h2>
           <ul class='flex gap-4 flex-wrap'>
             {
