fix: css variables for content height

--- a/src/components/layout/BaseFooter.astro
+++ b/src/components/layout/BaseFooter.astro
@@ -36,7 +36,7 @@ const { backToTop = false } = Astro.props;
 <footer class='bg-black text-white p-6'>
   <h2 class='hidden'>Footer</h2>
   <p class='outfit'>
-    Let me know if there's a project you'd like to work on together :)
+    <a class="underline" href="mailto:zach.toben@gmail.com">Let me know</a> if there's a project you'd like to work on together :)
   </p>
 </footer>
 
