--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --header-height: 96px;
+  --footer-height: 72px;
+}
+
 .full-height-minus-header {
-  min-height: calc(100vh - 72px);
+  min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 .card-shadow {
