small built-with changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,9 @@ const builtWith = [
     name: 'Sitemap',
     url: 'https://docs.astro.build/en/guides/integrations-guide/sitemap/',
   },
-  { name: 'Vercel', url: 'https://vercel.com' },
   { name: 'TypeScript', url: 'https://www.typescriptlang.org/' },
+  { name: 'Netlify', url: 'https://www.netlify.com/' },
+  { name: 'Brutal UI', url: 'https://brutal.elian.codes/' },
 ];
 
 const myTechStack = [
