--- a/src/components/home/MobileSocials.astro
+++ b/src/components/home/MobileSocials.astro
@@ -1,18 +1,23 @@
 ---
 const socials = [
   {
+    name: 'Blog',
+    url: '/blog/',
+    icon: 'i-uil-newspaper',
+  },
+  {
     name: 'GitHub',
-    url: 'https://github.com/eliancodes',
+    url: 'https://github.com/ztoben',
     icon: 'i-uil-github',
   },
   {
     name: 'Twitter',
-    url: 'https://www.twitter.com/eliancodes',
+    url: 'https://twitter.com/ztoben',
     icon: 'i-uil-twitter',
   },
   {
     name: 'LinkedIn',
-    url: 'https://www.linkedin.com/in/elianvancutsem',
+    url: 'https://www.linkedin.com/in/zachary-toben-bbab4a84/',
     icon: 'i-uil-linkedin',
   },
 ];
