--- a/src/components/layout/BaseNavigation.astro
+++ b/src/components/layout/BaseNavigation.astro
@@ -32,7 +32,7 @@ const { pageTitle } = Astro.props;
 <header class='border-b-4 border-black flex justify-between p-6 items-center h-24'>
   {pageTitle && <h1 class='hidden'>{pageTitle}</h1>}
   <a href='/' title='Back to Home'>
-    <p class='righteous md:text-5xl'>Hi, my name is Zach 👋</p>
+    <p class='righteous text-2xl lg:text-5xl'>Hi, my name is Zach 👋</p>
   </a>
   <nav class='hidden md:inline-block'>
     <h2 class='hidden'>Navigation</h2>
@@ -64,12 +64,6 @@ const { pageTitle } = Astro.props;
           </li>
         ))
       }
-    </ul>
-  </nav>
-  <nav class='md:hidden flex'>
-    <h2 class='hidden'>Mobile Navigation</h2>
-    <ul>
-      <li><a href='/blog/'>Blog</a></li>
     </ul>
   </nav>
 </header>
