--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,11 @@ const myTechStack = [
             <p class='mt-2 outfit text-xl md:text-3xl lg:text-5xl'>
               I'm a software engineer. A creator. An eternal learner.
             </p>
-            <Button target={'_self'} href='/blog/'>
-              Check out my blog &rarr;
-            </Button>
+            <div class="flex w-full justify-end">
+              <Button target={'_self'} href='/blog/'>
+                Check out my blog &rarr;
+              </Button>
+            </div>
           </div>
         </Card>
       </div>
@@ -67,7 +69,7 @@ const myTechStack = [
             What tools do I use?
           </h2>
           <p class='outfit'>
-            Generally, whatever gets the job done. But here are some of my favorites:
+            Generally, whatever gets the job done. But here are some I have the most experience with:
           </p>
           <br />
           <ul class='flex gap-4 flex-wrap'>
@@ -82,22 +84,7 @@ const myTechStack = [
             }
           </ul>
         </Card>
-      </div>
-      <div class='col-span-8 sm:col-span-4'>
-        <Card>
-          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
-            What do I like to make?
-          </h2>
-          <p class='poppins'>
-            I like building web applications, discovering new technologies, and sharing my knowledge with others.
-          </p>
-          <br />
-          <p class='poppins'>
-            Front end is where my interests most align, but I am an efficient full stack developer.
-          </p>
-        </Card>
-      </div>
-      <div class='col-span-8 sm:col-span-4'>
+        <div class="h-8"></div>
         <Card>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
             How is this site made?
@@ -117,6 +104,35 @@ const myTechStack = [
               ))
             }
           </ul>
+        </Card>
+      </div>
+      <div class='col-span-8 sm:col-span-4'>
+        <Card>
+          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
+            What makes work fun?
+          </h2>
+          <p class='poppins'>
+            I like building web applications, discovering new technologies, and sharing my knowledge with others.
+          </p>
+          <br />
+          <p class='poppins'>
+            Front end is where my interests most align, but I wear many hats.
+          </p>
+        </Card>
+        <div class="h-8"></div>
+        <Card>
+          <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
+            What's next?
+          </h2>
+          <p class='poppins'>
+            I'm always looking for new projects to work on. If you have an idea, let me know!
+          </p>
+          <br />
+          <div class="flex justify-end">
+            <Button target={'_self'} href='mailto:zach.toben@gmail.com'>
+              Let's work together &rarr;
+            </Button>
+          </div>
         </Card>
       </div>
     </section>
