--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,13 +15,15 @@ const { title, description } = content;
   description={description as string}
   ogImage={ogImage}
 >
-  <main class='p-6 lg:grid lg:grid-cols-3 flex justify-center'>
-    <BlogSideBar headings={headings} />
-    <BlogContent content={content}>
-      <slot />
-    </BlogContent>
+  <main class='flex flex-col full-height-minus-header'>
+    <div class='p-6 lg:grid lg:grid-cols-3 flex justify-center'>
+      <BlogSideBar headings={headings} />
+      <BlogContent content={content}>
+        <slot />
+      </BlogContent>
+    </div>
+    <section class='p-6 mt-auto'>
+      <RecentBlogPosts count={6} />
+    </section>
   </main>
-  <section class='p-6'>
-    <RecentBlogPosts count={6} />
-  </section>
 </Layout>
