--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -13,7 +13,7 @@ const posts = await getCollection('blog').then((collection) =>
   description='Brutal Blog | On this page you can find a collection of blogposts'
   pageTitle='Brutal Blog'
 >
-  <main class='bg-green p-6'>
+  <main class='bg-green p-6 full-height-minus-header'>
     <BlogList posts={posts} />
   </main>
 </Layout>
