--- a/src/components/blog/BlogSummaryCard.astro
+++ b/src/components/blog/BlogSummaryCard.astro
@@ -6,9 +6,10 @@ import { Button } from '@eliancodes/brutal-ui';
 
 interface Props {
   post: CollectionEntry<'blog'>;
+  compact?: boolean;
 }
 
-const { post } = Astro.props;
+const { post, compact } = Astro.props;
 ---
 
 <SummaryCard
@@ -16,12 +17,13 @@ const { post } = Astro.props;
   imgAlt={post.data.title}
   imgSrc={post.data.imgUrl}
   description={post.data.description}
+  compact={compact}
 >
-  <div class='flex justify-end my-4'>
+  <div class=`flex justify-end ${compact ? 'mt-2' : 'mt-4'}`>
     <Button href={`/blog/${post.slug}/`}>Read post &rarr;</Button>
   </div>
 
-  <div class='hidden sm:inline-block'>
+  <div class=`hidden sm:inline-block ${compact ? 'sm:hidden' : ''}`>
     <p class='poppins mt-2'>tags:</p>
     <div class='flex justify-between items-center'>
       <ul class='flex flex-wrap gap-4 mt-2'>
