--- a/src/components/generic/RecentBlogPosts.astro
+++ b/src/components/generic/RecentBlogPosts.astro
@@ -28,6 +28,6 @@ const posts = await getCollection('blog').then((posts) =>
         <Button href='/blog/'>to blog</Button>
       </div>
     </div>
-    <BlogList posts={posts} />
+    <BlogList posts={posts} compact />
   </Card>
 </section>
